# AI-Research-Assistant

./: .gitignore  README.md  docker-compose.yaml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/api_models/: __init__.py  fetch_papers_response.py
backend/app/: main.py
backend/config/: settings.py
backend/models/: research_paper.py
backend/routers/: fetch_papers_router.py
backend/services/: arxiv_service.py
backend/utils/: async_retry.py  logger.py
