[tool.poetry]
name = "backend"
version = "0.1.0"
description = "AI-Driven-Research-Assistant backend"
authors = ["Shreyas Sesham"]
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = ">=0.115.11,<0.116.0"
uvicorn = ">=0.34.0,<0.35.0"
requests = ">=2.32.3,<3.0.0"
beautifulsoup4 = ">=4.13.3,<5.0.0"
transformers = ">=4.49.0,<5.0.0"
torch = ">=2.6.0,<3.0.0"
pydantic = ">=2.10.6,<3.0.0"
faiss-cpu = ">=1.10.0,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
